# a2a-deep-research

./: .gitignore  LICENSE  README.md  TODO.md  dotenv_copy  pyproject.toml
reports/: response.md
src/: notebook.ipynb
src/a2a_client/: main.py
src/a2a_client/components/: agent_list.py  conversation.py  conversation_list.py  event_viewer.py  form_render.py  page_scaffold.py
src/a2a_client/pages/: agent_list.py  event_list.py  home.py
src/a2a_client/service/: types.py
src/a2a_client/service/client/: client.py
src/a2a_client/service/server/: adk_host_manager.py  application_manager.py  in_memory_manager.py  server.py  test_image.py
src/a2a_client/state/: host_agent_service.py  state.py
src/a2a_client/styles/: styles.py
src/a2a_client/tests/: test_adk_host_manager.py
src/a2a_server/: agent.py  agent_old.py  tools.py
src/a2a_server/currency_convertor/: agent.py  main.py  task_manager.py
src/a2a_server/deep_research/: agent.py  configuration.py  graph.py  main.py  nodes.py  prompts.py  state.py  struct.py  task_manager.py
src/a2a_server/deep_research/components/: configuration.py  graph.py  nodes.py  prompts.py  state.py  struct.py
src/mcp_server/: server.py
src/reports/: response.md
